--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "morgan": "~1.5.3",
     "serve-favicon": "~2.2.1",
     "mongodb": "^1.4.4",
-    "mongoose": "^4.6.8"
+    "mongoose": "^4.6.8",
+	"markdown": "^0.5.0"
   }
 }
