--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "serve-favicon": "~2.2.1",
     "mongodb": "^1.4.4",
     "mongoose": "^4.6.8",
-    "showdown": "^1.5.1"
-  }
+    "showdown": "^1.5.1",
+    "request": "^2.79.0",
+    "sendgrid": "^4.7.1"
+    }
 }
